--- a/FilteredList.Test/FilteredList.Test.csproj
+++ b/FilteredList.Test/FilteredList.Test.csproj
@@ -1,11 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+
+        <AssemblyName>Micky5991.FilteredList.Test</AssemblyName>
+
+        <RootNamespace>Micky5991.FilteredList.Test</RootNamespace>
+
+        <TargetFrameworks>net7.0;net6.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
