--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
             8.0.x
 
       - name: Build project
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release /p:TreatWarningsAsErrors=true
 
       - name: Run tests
         run: dotnet test --no-restore --verbosity normal
