--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,11 +9,28 @@ on:
       - '*'
 
 jobs:
+  variables:
+    runs-on: ubuntu-latest
+    name: Create variables
+    outputs:
+      istag: ${{ steps.vars.outputs.is_tag }}
+      ref: ${{ steps.vars.outputs.ref }}
+
+    steps:
+
+      - id: vars
+        run: |
+          echo "ref=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+          echo "is_tag=${{ startsWith(github.ref, 'refs/tags/') }}" >> $GITHUB_OUTPUT
+
   build-and-test:
     runs-on: ${{ matrix.os }}
+    needs: variables
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,7 +44,12 @@ jobs:
             8.0.x
 
       - name: Build project
-        run: dotnet build --configuration Release /p:TreatWarningsAsErrors=true
+        run: dotnet build --configuration Release -p:TreatWarningsAsErrors=true -p:Version=${{ needs.variables.outputs.ref }} -p:PackageVersion=${{ needs.variables.outputs.ref }}
 
       - name: Run tests
         run: dotnet test --no-restore --verbosity normal
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: nuget-package
+          path: FilteredList/bin/Release/*.nupkg
